# HistoricalTranscriptions

./: pyproject.toml  segments.json
example/transcripts/: 2HEALEYnHIRST042112P10001.txt
final/: segments.json
final/transcripts/: 100BAKER030920P20001.txt  101TOC0001.txt  102BAKER032920P10001.txt  103BAKER032920P20001.txt  104BAKER070120P10001.txt  105BAKER070120P20001.txt  107BAKER072420P10001.txt  108BAKER072420P20001.txt  109BAKER080220P10001.txt  10davies022015P20001.txt  110BAKER080220P20001.txt  111BAKER080320P10001.txt  112BAKER080320P20001.txt  11davies022015P30001.txt  12HOOK060315P10001.txt  13HOOK060315P20001.txt  14HOOK060315P30001.txt  15DAVIES081015P10001.txt  16DAVIES081015P20001.txt  17DAVIES081015P30001.txt  18DAVIES081015P40001.txt  19DAVIES121915P10001.txt  1WARREN120911P20001.txt  20DAVIES121915P20001.txt  21.txt  22DAVIES040616P10001.txt  23DAVIES040616P20001.txt  24DAVIES071916P10001.txt  25DAVIES071916P20001.txt  26DAVIES052716P20001.txt  27DAVIES052716P10001.txt  28SOCLEADERS041416P10001.txt  29SOCLEADERS041416P20001.txt  2HEALEYnHIRST042112P10001.txt  30DAVIES092716P10001.txt  31DAVIES092716P20001.txt  32DAVIES010117P10001.txt  33DAVIES010117N2P10001.txt  34DAVIES010117N2P20001.txt  35BROWN033117P10001.txt  (+69 more)
src/: main.py  tesseract.py  transcribe.py
transcripts/: 2HEALEYnHIRST042112P10001.txt
