[tool.poetry]
name = "historicalrestoral"
version = "0.1.0"
description = ""
authors = ["Rithvik S <31707957+ChosenQuill@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.2"
pillow = "^11.0.0"
numpy = "^2.1.3"
opencv-python-headless = "^4.10.0.84"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
layoutparser = "^0.3.4"
opencv-python = "^4.10.0.84"
pymupdf = "^1.25.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
